# caelex-assessment

./: .env.ci.example  .env.example  .eslintrc.json  .gitignore  .prettierignore  .vercelignore  .~lock.Caelex_ESA_BIC_Business_Plan.pdf#  .~lock.Caelex_ESA_BIC_Tables_Figures.xlsx#  .~lock.Caelex_Financial_Model.xlsx#  ACE-AUDIT-REPORT.md  AUDIT-REPORT.md  AUDIT_REPORT.md  CLAUDE.md  COMPLIANCE-REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  EPHEMERIS-ANALYSE-BERICHT.md  GITHUB-SETTINGS-CHECKLIST.md  GOOGLE_CALENDAR_SETUP.md  LICENSE  LinkedIn_Company_Posts_Woche1_2.md  LinkedIn_Posts_Woche1.md  MASTER_PROMPT_Caelex_Assure.md  PROMPT-DEPRECATE-AI-GENERATE.md  PROMPT-ECOSYSTEM-UPGRADE.md  PROMPT-PLATFORM-CONSOLIDATION.md  PROMPT-UNIFIED-ASSESSMENT-UPGRADE.md  PROMPT-WHATIF-SIMULATOR-UPGRADE.md  PROMPT_01_Regulatory_Credit_Rating.md  PROMPT_02_Data_Intelligence_Platform.md  PROMPT_03_Insurance_Risk_Pricing.md  PROMPT_04_Regulatory_Escrow_MA.md  PROMPT_05_Stress_Testing_Engine.md  PROMPT_06_API_Infrastructure.md  PROMPT_Caelex_Assure_Implementation.md  README.md  REGULATORY_DATA_AUDIT.md  commitlint.config.js  ephemeris080326.md  fullaudit0802.md  funktionen-heute-2025-03-02.md  (+21 more)
.github/: dependabot.yml
.husky/: pre-commit
docs/: ASSESSMENT-BRIEFING.md  ATLAS-ACCESSIBILITY-AUDIT.md  ATLAS-CORPUS-EXPANSION-PLAN.md  ATLAS-DESKTOP-PLAN.md  ATLAS-LAWYER-UX-AUDIT.md  ATLAS-V2-MASTER-PLAN.md  ATLAS-V2-PROGRESS.md  (+64 more)
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+5092 files in other folders)
